# ProjectClock

./: .gitignore
ArabClockBot/: index.js
ArabClockBot (NodeJS)/: index.js
ArabClockBot (NodeJS)/commands/: help.js  open-sessions.js  setup.js  update.js
ArabClockBot (NodeJS)/utils/: botPresence.js  helpers.js
ArabClockBot/commands/: adminData.js  ping.js
ArabClockBot/cronJobs/: dailyReset.js
ArabClockBot/logs/: .0e6a1158c335a9091715230035ccd464abe5c9d1-audit.json  .3ad31d6ab9d1ad1b6cbc5662035479f902a2a38b-audit.json  .a3676e57891cb984d9b7f96d400bd8479eefb85a-audit.json  (+151 more)
ProjectClock/: current_bot_preinstall  loader.js  main.py  pyproject.toml
ProjectClock (py)/: README.md  package-lock.json  package.json
ProjectClock/timeclock/: bot.py  constants.py  log.py
ProjectClock/timeclock/analytics/: patterns.py
ProjectClock/timeclock/cogs/: analytics.py  listener.py  points.py  schedule.py  teams.py
ProjectClock/timeclock/database/: guild.py  team.py
logs/: 2025-02-12_15-53-46.txt  2025-02-12_15-53-51.txt  2025-02-12_16-24-17.txt  2025-02-12_16-24-20.txt  2025-02-12_16-30-52.txt  2025-02-12_16-31-38.txt  2025-02-12_16-37-19.txt  2025-02-12_16-37-27.txt  2025-02-12_16-43-03.txt  2025-02-12_16-44-56.txt  2025-02-12_16-45-44.txt  2025-02-12_16-56-23.txt  2025-02-12_16-56-49.txt  2025-02-12_17-44-58.txt  2025-02-12_17-45-17.txt  2025-02-12_17-46-12.txt  2025-02-12_17-48-52.txt  2025-02-12_17-52-03.txt  2025-02-12_17-57-38.txt  2025-02-12_17-57-56.txt  2025-02-12_18-02-46.txt  2025-02-12_18-09-24.txt  2025-02-12_18-09-41.txt  2025-02-12_18-10-12.txt
(+13 files in other folders)
